fixed overflow

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,11 +1,11 @@
-body.en-page-ente-nadu {
+body.en-page-ente-nadu { 
     background: linear-gradient(to bottom right, rgb(37, 202, 37), rgb(28, 54, 39));
-    min-width: 100%;
-    max-height: 100%;
-    overflow: scroll;
-    background-size: cover;
     background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100%;
+    
   }
   body.home-page {
     background: rgb(157, 243, 167);
-  }
+    font-family: 'Josefin Sans', sans-serif
+  } 
